<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".controlador.MainActivity">

    <TextView
        android:id="@+id/TxtSaludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BtnTransferencias"
        style="@style/ButtonsStyle"
        android:layout_width="161dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/main_transferencias"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnPosicion" />

    <Button
        android:id="@+id/BtnCajeros"
        style="@style/ButtonsStyle"
        android:layout_width="161dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/main_cajeros"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnTransferencias" />

    <Button
        android:id="@+id/BtnCambiarPass"
        style="@style/ButtonsStyle"
        android:layout_width="161dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/main_contraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnPromociones" />

    <Button
        android:id="@+id/BtnPromociones"
        style="@style/ButtonsStyle"
        android:layout_width="161dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/main_promociones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnIngresos" />

    <Button
        android:id="@+id/BtnIngresos"
        style="@style/ButtonsStyle"
        android:layout_width="161dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/main_ingresos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtSaludo" />

    <Button
        android:id="@+id/BtnPosicion"
        style="@style/ButtonsStyle"
        android:layout_width="161dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/main_global"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtSaludo" />

</android.support.constraint.ConstraintLayout>