<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controlador.GestionCajerosActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_direcion"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/direccion"
            android:layout_alignParentLeft="true"
            android:ems="10" />

        <TextView
            android:id="@+id/label_latitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_direccion"
            android:layout_marginTop="20dp"
            android:text="@string/label_latitud"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/latitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_latitud"
            android:layout_alignParentLeft="true"
            android:ems="10"
            ></EditText>

        <TextView
            android:id="@+id/label_longitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/latitud"
            android:layout_marginTop="20dp"
            android:text="@string/label_longitud"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/longitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_longitud"
            android:layout_alignParentLeft="true"
            android:ems="10"></EditText>

        <TextView
            android:id="@+id/label_zoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/longitud"
            android:layout_marginTop="20dp"
            android:text="@string/label_zoom"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/zoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_zoom"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:inputType="phone"></EditText>



        <LinearLayout
            android:id="@+id/botonera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/zoom"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCancel" />

            <Button
                android:id="@+id/boton_guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnGuardar" />
        </LinearLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>